# serializer version: 1
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(d -> arraySum(arrayMap((v, dd) -> if(ifNull(equals(dd, d), isNull(dd)
                                                              and isNull(d)), v, 0), vals, days)), arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1)))) AS total,
         breakdown_value AS breakdown_value
  FROM
    (SELECT groupArray(top_n_and_other_breakdown_values.day_start) AS days,
            groupArray(top_n_and_other_breakdown_values.value) AS vals,
            top_n_and_other_breakdown_values.breakdown_value AS breakdown_value
     FROM
       (SELECT day_start AS day_start,
               value AS value,
               breakdown_value AS breakdown_value
        FROM
          (SELECT top_n_breakdown_values.day_start AS day_start,
                  top_n_breakdown_values.value AS value,
                  top_n_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     ranked_breakdown_values.count AS value,
                     ranked_breakdown_values.breakdown_value AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_1), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(lessOrEquals(ranked_breakdown_values.breakdown_rank, 25), 0)) AS top_n_breakdown_values
           UNION ALL SELECT other_breakdown_values.day_start AS day_start,
                            other_breakdown_values.value AS value,
                            other_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     sum(ranked_breakdown_values.count) AS value,
                     '$$_posthog_breakdown_other_$$' AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_1), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(greater(ranked_breakdown_values.breakdown_rank, 25), 0)
              GROUP BY breakdown_value,
                       ranked_breakdown_values.day_start) AS other_breakdown_values)
        ORDER BY day_start ASC, value ASC) AS top_n_and_other_breakdown_values
     GROUP BY top_n_and_other_breakdown_values.breakdown_value)
  ORDER BY if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(vals) DESC, breakdown_value ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown_on_view
  '''
  SELECT posthog_test_test_table_1.id AS id,
         toTimeZone(posthog_test_test_table_1.created, 'UTC') AS created,
         posthog_test_test_table_1.prop_1 AS prop_2,
         1 AS boolfield
  FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown_on_view.1
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(d -> arraySum(arrayMap((v, dd) -> if(ifNull(equals(dd, d), isNull(dd)
                                                              and isNull(d)), v, 0), vals, days)), arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1)))) AS total,
         breakdown_value AS breakdown_value
  FROM
    (SELECT groupArray(top_n_and_other_breakdown_values.day_start) AS days,
            groupArray(top_n_and_other_breakdown_values.value) AS vals,
            top_n_and_other_breakdown_values.breakdown_value AS breakdown_value
     FROM
       (SELECT day_start AS day_start,
               value AS value,
               breakdown_value AS breakdown_value
        FROM
          (SELECT top_n_breakdown_values.day_start AS day_start,
                  top_n_breakdown_values.value AS value,
                  top_n_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     ranked_breakdown_values.count AS value,
                     ranked_breakdown_values.breakdown_value AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_2), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM
                         (SELECT posthog_test_test_table_1.id AS id,
                                 toTimeZone(posthog_test_test_table_1.created, 'UTC') AS created,
                                 posthog_test_test_table_1.prop_1 AS prop_2,
                                 1 AS boolfield
                          FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1) AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(lessOrEquals(ranked_breakdown_values.breakdown_rank, 25), 0)) AS top_n_breakdown_values
           UNION ALL SELECT other_breakdown_values.day_start AS day_start,
                            other_breakdown_values.value AS value,
                            other_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     sum(ranked_breakdown_values.count) AS value,
                     '$$_posthog_breakdown_other_$$' AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_2), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM
                         (SELECT posthog_test_test_table_1.id AS id,
                                 toTimeZone(posthog_test_test_table_1.created, 'UTC') AS created,
                                 posthog_test_test_table_1.prop_1 AS prop_2,
                                 1 AS boolfield
                          FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1) AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(greater(ranked_breakdown_values.breakdown_rank, 25), 0)
              GROUP BY breakdown_value,
                       ranked_breakdown_values.day_start) AS other_breakdown_values)
        ORDER BY day_start ASC, value ASC) AS top_n_and_other_breakdown_values
     GROUP BY top_n_and_other_breakdown_values.breakdown_value)
  ORDER BY if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(vals) DESC, breakdown_value ASC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown_on_view_with_date_timestamp
  '''
  SELECT posthog_test_test_table_1.id AS id,
         toDate(toTimeZone(posthog_test_test_table_1.created, 'UTC')) AS timestamp,
         posthog_test_test_table_1.prop_1 AS prop_2,
         1 AS boolfield
  FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1
  LIMIT 101
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown_on_view_with_date_timestamp.1
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(d -> arraySum(arrayMap((v, dd) -> if(ifNull(equals(dd, d), isNull(dd)
                                                              and isNull(d)), v, 0), vals, days)), arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1)))) AS total,
         breakdown_value AS breakdown_value
  FROM
    (SELECT groupArray(top_n_and_other_breakdown_values.day_start) AS days,
            groupArray(top_n_and_other_breakdown_values.value) AS vals,
            top_n_and_other_breakdown_values.breakdown_value AS breakdown_value
     FROM
       (SELECT day_start AS day_start,
               value AS value,
               breakdown_value AS breakdown_value
        FROM
          (SELECT top_n_breakdown_values.day_start AS day_start,
                  top_n_breakdown_values.value AS value,
                  top_n_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     ranked_breakdown_values.count AS value,
                     ranked_breakdown_values.breakdown_value AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(e.timestamp) AS day_start,
                              ifNull(nullIf(toString(e.prop_2), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM
                         (SELECT posthog_test_test_table_1.id AS id,
                                 toDate(toTimeZone(posthog_test_test_table_1.created, 'UTC')) AS timestamp,
                                 posthog_test_test_table_1.prop_1 AS prop_2,
                                 1 AS boolfield
                          FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1) AS e
                       WHERE and(greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(lessOrEquals(ranked_breakdown_values.breakdown_rank, 25), 0)) AS top_n_breakdown_values
           UNION ALL SELECT other_breakdown_values.day_start AS day_start,
                            other_breakdown_values.value AS value,
                            other_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     sum(ranked_breakdown_values.count) AS value,
                     '$$_posthog_breakdown_other_$$' AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(e.timestamp) AS day_start,
                              ifNull(nullIf(toString(e.prop_2), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM
                         (SELECT posthog_test_test_table_1.id AS id,
                                 toDate(toTimeZone(posthog_test_test_table_1.created, 'UTC')) AS timestamp,
                                 posthog_test_test_table_1.prop_1 AS prop_2,
                                 1 AS boolfield
                          FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1) AS e
                       WHERE and(greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(greater(ranked_breakdown_values.breakdown_rank, 25), 0)
              GROUP BY breakdown_value,
                       ranked_breakdown_values.day_start) AS other_breakdown_values)
        ORDER BY day_start ASC, value ASC) AS top_n_and_other_breakdown_values
     GROUP BY top_n_and_other_breakdown_values.breakdown_value)
  ORDER BY if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(vals) DESC, breakdown_value ASC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_breakdown_with_property
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(d -> arraySum(arrayMap((v, dd) -> if(ifNull(equals(dd, d), isNull(dd)
                                                              and isNull(d)), v, 0), vals, days)), arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1)))) AS total,
         breakdown_value AS breakdown_value
  FROM
    (SELECT groupArray(top_n_and_other_breakdown_values.day_start) AS days,
            groupArray(top_n_and_other_breakdown_values.value) AS vals,
            top_n_and_other_breakdown_values.breakdown_value AS breakdown_value
     FROM
       (SELECT day_start AS day_start,
               value AS value,
               breakdown_value AS breakdown_value
        FROM
          (SELECT top_n_breakdown_values.day_start AS day_start,
                  top_n_breakdown_values.value AS value,
                  top_n_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     ranked_breakdown_values.count AS value,
                     ranked_breakdown_values.breakdown_value AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_1), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0), equals(e.prop_1, 'a'))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(lessOrEquals(ranked_breakdown_values.breakdown_rank, 25), 0)) AS top_n_breakdown_values
           UNION ALL SELECT other_breakdown_values.day_start AS day_start,
                            other_breakdown_values.value AS value,
                            other_breakdown_values.breakdown_value AS breakdown_value
           FROM
             (SELECT ranked_breakdown_values.day_start AS day_start,
                     sum(ranked_breakdown_values.count) AS value,
                     '$$_posthog_breakdown_other_$$' AS breakdown_value
              FROM
                (SELECT count AS count,
                                 day_start AS day_start,
                                 breakdown_value AS breakdown_value,
                                 total_count_for_breakdown AS total_count_for_breakdown,
                                 row_number() OVER (PARTITION BY day_start
                                                    ORDER BY total_count_for_breakdown DESC) AS breakdown_rank
                 FROM
                   (SELECT sum(total) AS count,
                           day_start AS day_start,
                           breakdown_value AS breakdown_value,
                           sum(count) OVER (PARTITION BY breakdown_value) AS total_count_for_breakdown
                    FROM
                      (SELECT count() AS total,
                              toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start,
                              ifNull(nullIf(toString(e.prop_1), ''), '$$_posthog_breakdown_null_$$') AS breakdown_value
                       FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
                       WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0), equals(e.prop_1, 'a'))
                       GROUP BY day_start,
                                breakdown_value)
                    GROUP BY day_start,
                             breakdown_value
                    ORDER BY total_count_for_breakdown DESC)) AS ranked_breakdown_values
              WHERE ifNull(greater(ranked_breakdown_values.breakdown_rank, 25), 0)
              GROUP BY breakdown_value,
                       ranked_breakdown_values.day_start) AS other_breakdown_values)
        ORDER BY day_start ASC, value ASC) AS top_n_and_other_breakdown_values
     GROUP BY top_n_and_other_breakdown_values.breakdown_value)
  ORDER BY if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_other_$$'), 0), 2, if(ifNull(equals(breakdown_value, '$$_posthog_breakdown_null_$$'), 0), 1, 0)) ASC, arraySum(vals) DESC, breakdown_value ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_data_warehouse
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_data_warehouse_all_time
  '''
  SELECT min(toTimeZone(posthog_test_test_table_1.created, 'UTC')) AS `min(toTimeZone(created, 'UTC'))`
  FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_data_warehouse_all_time.1
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_entity_property
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0), equals(e.prop_1, 'a'))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_and_data_warehouse_all_time
  '''
  SELECT min(toTimeZone(posthog_test_test_table_1.created, 'UTC')) AS `min(toTimeZone(created, 'UTC'))`
  FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_and_data_warehouse_all_time.1
  '''
  SELECT toTimeZone(events.timestamp, 'UTC') AS timestamp
  FROM events
  WHERE and(equals(events.team_id, 99999), greater(toTimeZone(events.timestamp, 'UTC'), toDateTime64('1980-01-01 00:00:00.000000', 6, 'UTC')), equals(events.event, '$pageview'))
  ORDER BY toTimeZone(events.timestamp, 'UTC') ASC
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   format_csv_allow_double_quotes=0,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_and_data_warehouse_all_time.2
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_and_data_warehouse_all_time.3
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start
        FROM events AS e SAMPLE 1
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), equals(e.event, '$pageview'))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_filtering_on_warehouse_person_property
  '''
  SELECT toTimeZone(events.timestamp, 'UTC') AS timestamp
  FROM events
  WHERE and(equals(events.team_id, 99999), greater(toTimeZone(events.timestamp, 'UTC'), toDateTime64('1980-01-01 00:00:00.000000', 6, 'UTC')), equals(events.event, '$pageview'))
  ORDER BY toTimeZone(events.timestamp, 'UTC') ASC
  LIMIT 1 SETTINGS readonly=2,
                   max_execution_time=60,
                   allow_experimental_object_type=1,
                   format_csv_allow_double_quotes=0,
                   max_ast_elements=4000000,
                   max_expanded_ast_elements=4000000,
                   max_bytes_before_external_group_by=0,
                   transform_null_in=1,
                   optimize_min_equality_disjunction_chain_length=4294967295,
                   allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_events_filtering_on_warehouse_person_property.1
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS day_start
        FROM events AS e SAMPLE 1
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS e__person___properties___email
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
        LEFT JOIN
          (SELECT posthog_test_test_table_1.id AS id,
                  posthog_test_test_table_1.prop_1 AS e__person__posthog_test_test_table_1___prop_1
           FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS posthog_test_test_table_1) AS e__person__posthog_test_test_table_1 ON equals(e__person.e__person___properties___email, e__person__posthog_test_test_table_1.e__person__posthog_test_test_table_1___prop_1)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2022-12-01 00:00:00', 'UTC')), toIntervalDay(1))), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), equals(e.event, '$pageview'), ifNull(equals(e__person__posthog_test_test_table_1.id, 'false'), 0))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       format_csv_allow_double_quotes=0,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_query_properties
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0), equals(e.prop_1, 'a'))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
# name: TestTrendsDataWarehouseQuery.test_trends_with_multiple_property_types
  '''
  SELECT arrayMap(number -> plus(toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toIntervalDay(number)), range(0, plus(coalesce(dateDiff('day', toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1)), toStartOfInterval(assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC')), toIntervalDay(1)))), 1))) AS date,
         arrayMap(_match_date -> arraySum(arraySlice(groupArray(ifNull(count, 0)), indexOf(groupArray(day_start) AS _days_for_count, _match_date) AS _index, plus(minus(arrayLastIndex(x -> ifNull(equals(x, _match_date), isNull(x)
                                                                                                                                                                                                   and isNull(_match_date)), _days_for_count), _index), 1))), date) AS total
  FROM
    (SELECT sum(total) AS count,
            day_start AS day_start
     FROM
       (SELECT count() AS total,
               toStartOfDay(toTimeZone(e.created, 'UTC')) AS day_start
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql.datawarehouse.trendquery/posthog_test_test_table_1/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` String, `prop_1` String, `prop_2` String, `created` DateTime64(3, \'UTC\')') AS e
        WHERE and(ifNull(greaterOrEquals(toTimeZone(e.created, 'UTC'), toStartOfInterval(assumeNotNull(toDateTime('2023-01-01 00:00:00', 'UTC')), toIntervalDay(1))), 0), ifNull(lessOrEquals(toTimeZone(e.created, 'UTC'), assumeNotNull(toDateTime('2023-01-07 23:59:59', 'UTC'))), 0), and(equals(e.prop_1, 'a'), equals(e.prop_2, 'e')))
        GROUP BY day_start)
     GROUP BY day_start
     ORDER BY day_start ASC)
  ORDER BY arraySum(total) DESC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1
  '''
# ---
